--- a/To-Do_list.html
+++ b/To-Do_list.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Pastelový To-Do List s Kalendářem</title>
+<title>Pastelový To-Do List</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
 <style>
@@ -146,7 +146,7 @@ li span {
 <body>
 
 <div class="container">
-    <h1>🌸 Pastelový To-Do List + Kalendář</h1>
+    <h1>🌸 Pastelový To-Do List</h1>
 
     <div class="wrapper">
 
