--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
     <a href="Gamezone.html">Herní zóna</a>
     <a href="Blog.html">Vytvoř si svůj vlastní blog!</a>
 </div>
-
+<footer>
+    <p>&copy; 2025 Judo by Anna</p>
+  </footer>
 </body>
 </html>
