--- a/Kahoot.html
+++ b/Kahoot.html
@@ -66,25 +66,25 @@
 
     { image: "Klarinet.jpg", correctAnswer: "Klarinet" },
     { image: "Klavír.jpg", correctAnswer: "Klavír" },
-    { image: "img/13.jpg", correctAnswer: "Odpověď 13" },
-    { image: "img/14.jpg", correctAnswer: "Odpověď 14" },
-    { image: "img/15.jpg", correctAnswer: "Odpověď 15" },
-    { image: "img/16.jpg", correctAnswer: "Odpověď 16" },
-    { image: "img/17.jpg", correctAnswer: "Odpověď 17" },
-    { image: "img/18.jpg", correctAnswer: "Odpověď 18" },
-    { image: "img/19.jpg", correctAnswer: "Odpověď 19" },
-    { image: "img/20.jpg", correctAnswer: "Odpověď 20" },
+    { image: "Kontrabas.jpg", correctAnswer: "Kontrabas" },
+    { image: "Křídlo.jpg", correctAnswer: "Křídlo" },
+    { image: "Kytara.jpg", correctAnswer: "Kytara" },
+    { image: "Lesní roh.jpg", correctAnswer: "Lesní roh" },
+    { image: "Loutna.jpg", correctAnswer: "Loutna" },
+    { image: "Malý buben.jpg", correctAnswer: "Malý buben" },
+    { image: "Panova_fletna.jpg", correctAnswer: "Panova flétna" },
+    { image: "Pozoun.jpg", correctAnswer: "Pozoun" },
 
-    { image: "img/21.jpg", correctAnswer: "Odpověď 21" },
-    { image: "img/22.jpg", correctAnswer: "Odpověď 22" },
-    { image: "img/23.jpg", correctAnswer: "Odpověď 23" },
-    { image: "img/24.jpg", correctAnswer: "Odpověď 24" },
-    { image: "img/25.jpg", correctAnswer: "Odpověď 25" },
-    { image: "img/26.jpg", correctAnswer: "Odpověď 26" },
-    { image: "img/27.jpg", correctAnswer: "Odpověď 27" },
-    { image: "img/28.jpg", correctAnswer: "Odpověď 28" },
-    { image: "img/29.jpg", correctAnswer: "Odpověď 29" },
-    { image: "img/30.jpg", correctAnswer: "Odpověď 30" }
+    { image: "Pricna_flétna.jpg", correctAnswer: "Příčná flétna" },
+    { image: "Saxofon.jpg", correctAnswer: "Saxofon" },
+    { image: "Tamburína.jpg", correctAnswer: "Tamburína" },
+    { image: "Triangl.jpg", correctAnswer: "Triangl" },
+    { image: "Trubka.jpg", correctAnswer: "Trubka" },
+    { image: "Tuba.jpg", correctAnswer: "Tuba" },
+    { image: ".jpg", correctAnswer: "Odpověď 27" },
+    { image: ".jpg", correctAnswer: "Odpověď 28" },
+    { image: ".jpg", correctAnswer: "Odpověď 29" },
+    { image: ".jpg", correctAnswer: "Odpověď 30" }
   ];
 
   let current = 0;
